# demo_fast-api-lms

./: .gitignore  README.md  docker-compose.yaml
backend/: alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 80f5d3d865f9_fix_datetime_type.py
backend/api/: access_user_log.py  app_manager.py  db.py  gunicorn_config_prod.py  init_db.py  main.py  migrate_db.py  num_of_access_user.py  num_of_over_1000_access.py  total_study_time.py
backend/api/IRT_models/: IRT_Rasch_model.py
backend/api/cruds/: announcement.py  create_week.py  flow.py  image.py  read_course.py  read_subject.py  read_week.py  update_course.py  update_flowpage.py  update_week.py  user.py
backend/api/migration/: add_rows.py  m001_add_user_kind.py  m002_add_user.py  m003_add_subject.py  m004_add_subject_info_syllabus.py  m005_add_course.py  m006_add_taking_course.py  m008_add_week.py  m009_add_content.py  m010_add_block.py  m011_add_flow.py  m012_add_flow_rule.py  m013_add_page_group.py  m014_add_single_text_questions.py  m015_add_multiple_text_question.py  m016_add_descriptive_text_question.py  m017_add_choice_question.py  m018_add_choice_question_choice.py  m019_add_blank.py  m020_add_correct_answers.py
backend/api/models/: __init__.py  announcement.py  block.py  content.py  course.py  flow.py  flow_page.py  flow_session.py  image.py  page_group.py  subject.py  user.py  week.py
backend/api/routers/: announcement.py  auth.py  course.py  flow.py  image.py  subject.py  user.py  week.py
backend/docker/: Dockerfile
(+148 files in other folders)
