[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI LMS Backend"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
python-jose = "^3.3.0"
aiomysql = "^0.2.0"
passlib = "^1.7.4"
yamale = "^5.2.1"
bcrypt = "^4.1.3"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
