[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI LMS Backend"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
python-jose = "^3.3.0"
aiomysql = "^0.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
yamale = "^5.2.1"
numpy = "^1.26.4"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
